--- a/assets/css/inventario.css
+++ b/assets/css/inventario.css
@@ -1,9 +1,9 @@
-.digimones__seleccionados{
+.digimones__lista{
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     place-items: center; /* Centra tanto horizontal como verticalmente */
     gap: 0.5rem;
-    margin: 5rem;
+    margin: 2rem;
     margin-left: 20rem;
     margin-right: 20rem;
 }
@@ -14,25 +14,89 @@ h2{
     background: url("../img/Fondos/Fondo2.jpg");
     border-radius: 1rem;
     padding: 1rem;
-    margin-left: 40%;
-    margin-right: 40%;
+    width: 40%;
+    margin-left: 30%;
+    margin-right: 30%;
+}
+
+.equipo__header h2{
+    margin: 0;
+    margin-left: 8%;
+}
+
+.equipo__header{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
 }
 
 .cambiar{
-    order: 0;
-    text-align: center;
+    margin-left: 1rem;
+    padding: 0.5rem 1rem;
+}
+
+.botones-superiores{
+    display: flex;
+    flex-direction: row;
+}
+
+.volver{
+    margin-right: auto;
+    margin-top: 1%;
+    margin-left: 1%;
+}
+
+.evolucionar{
+    margin-left: auto;
+    margin-top: 1%;
+    margin-right: 1%;
+}
+
+.evolucionarEnabled{
+    margin-left: auto;
+    margin-top: 1%;
+    margin-right: 1%;
+    border: 0.3rem solid #ffffff00;
+    border-radius: 12px;
+    background: url("../img/Fondos/Fondo5.jpg") padding-box, linear-gradient(var(--angle),
+            #eeff00,
+            #ff800a) border-box;
+    animation: 8s rotate linear infinite;
 }
 
 .contenidoInventario {
     display: flex;
     flex-direction: column;
     align-content: space-between;
-    gap: 1rem;
+    gap: 0.5rem;
     background-color: #c6e3eeb9;
+}
+
+.guardados{
+    order: 2;
 }
 
 .equipo{
     order: 0;
+}
+
+.btn-buscar{
+    height: 20%;
+}
+
+.buscar_content{
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+}
+
+.buscar{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    order: 1;
+    gap: 0.5rem;
 }
 
 .cartaDigimon{
@@ -45,10 +109,6 @@ h2{
             #40f2ff,
             #ff46ff) border-box;
     animation: 8s rotate linear infinite;
-}
-
-.buscar{
-    order: 1;
 }
 
 @keyframes rotate {
