--- a/assets/css/inventario.css
+++ b/assets/css/inventario.css
@@ -91,7 +91,14 @@ h2{
     gap: 0.5rem;
 }
 
+h2 + .buscar {
+    order: 1;
+}
+
 .buscar{
+    position: absolute;
+    top: 60%;
+    left: 5%;
     display: flex;
     flex-direction: column;
     align-items: center;
