--- a/assets/css/inventario.css
+++ b/assets/css/inventario.css
@@ -111,6 +111,10 @@ h2{
     animation: 8s rotate linear infinite;
 }
 
+.cartaDigimon:hover {
+    transform: scale(1.1);
+}
+
 @keyframes rotate {
     to {
         --angle: 360deg;
